2007-11-17 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_RepositoryModel.py: Properly display the city

2007-11-16  Stéphane Charette <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: issue #1381, no need to print
	"Confidence" on every reference line if it is "Normal"

2007-11-16  Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/rel_pt.py: import gen.lib
        * src/DataViews/_PersonView.py: typo on gettext context
	* src/PageView.py: typo on gettext context

2007-11-16 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	Trying to fix unicode filename handling on Windows. Patch ported from 2.2.
 	* src/Utils.py: add get_unicode_path()
	* src/ArgHandler.py: use Utils.get_unicode_path()
	* src/AddMedia.py: use Utils.get_unicode_path()
	* src/DbLoader.py: use Utils.get_unicode_path()
	* src/Editors/_EditMedia.py: use Utils.get_unicode_path()

2007-11-16  Jerome Rapinat <romjerome@yahoo.fr>
	* src/glade/gramps.glade: correct mnemonic_widget
	* src/glade/edit_person.glade: correct mnemonic_widget
	ticket #1367

2007-11-16 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Config/_GrampsConfigKeys.py: Add keys for the PedigreeView
	* src/DataViews/_PedigreeView.py: Remember tree settings in config
	* src/plugins/TestcaseGenerator.py: Remove date tests
	* src/plugins/DateParserDisplayTest.py: New plugin split out from
	TestcaseGenerator

2007-11-13  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Fix 0001369: Cannot translate (LivingProxy) 
	references on NarrativeWeb dialog

2007-11-13 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/GraphViz.py: issue #1362, code generation should not show
	open with ghostview, ..., instead show app with text/plain.

2007-11-13 Jim Sack <jgsack@san.rr.com>
	* src/test/regrtest.py: undo removal of module imports in scan-for-tests
	* src/GrampsDbUtils/test/_GrampsDbWRFactories_test.py: minor improve.
	* src/GrampsDbUtils/test/_GedcomChar_test.py: add tests for utf8